--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "node_modules/jasmine/bin/jasmine.js"
   },
   "devDependencies": {
+    "eslint": "^0.20.0",
     "jasmine": "^2.3.1"
   }
 }
