--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/zzo/sivart-data.git"
   },
   "dependencies": {
-    "gcloud": "^0.14.0"
+    "gcloud": "^0.14.0",
+    "q": "^1.4.1"
   },
   "license": "Apache-2.0",
   "scripts": {
